[tool.poetry]
name = "file_navigator"
version = "0.1.0"
description = ""
authors = ["Joey Stevens <joey.stevens00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.52.0"
uvicorn = "^0.11.3"
beautifulsoup4 = "^4.8.2"
lxml = "^4.5.0"
jinja2 = "^2.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
